Add some small code improvements after java upgrade